--- a/app/SliderProduct/NavBar/NavBar.module.css
+++ b/app/SliderProduct/NavBar/NavBar.module.css
@@ -3,7 +3,8 @@
   margin: auto;
 }
 .navbar_container {
-  margin-top: 35px;
+  padding: 10px;
+  /* margin-top: 35px; */
 }
 .carousel_item {
   display: inline-block;
@@ -43,7 +44,7 @@
     width: 85vw;
   }
   .navbar_container {
-    margin-top: 35px;
+    /* margin-top: 35px; */
   }
 }
 @media (max-width: 1000px) {
@@ -56,7 +57,7 @@
     width: 100vw;
   }
   .navbar_container {
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
 }
 @media (max-width: 767px) {
@@ -74,6 +75,6 @@
     white-space: nowrap;
   }
   .navbar_container {
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
 }
