--- a/app/SliderProduct/NavBar/NavBar.module.css
+++ b/app/SliderProduct/NavBar/NavBar.module.css
@@ -69,12 +69,10 @@
     border-width: 1px;
     cursor: pointer;
     justify-content: center;
-    width: 150px;
+    width: 180px;
     padding: calc(0.5em - 1px) 1em;
     text-align: center;
     white-space: nowrap;
-  }
-  .navbar_container {
-    /* margin-top: 20px; */
+    font-size: 14px;
   }
 }
