--- a/app/SliderProduct/InfoTechnical/InfoTechnical.module.css
+++ b/app/SliderProduct/InfoTechnical/InfoTechnical.module.css
@@ -44,6 +44,18 @@
   width: 100%;
   display: none;
 }
+.title {
+  font-family: "Arial", sans-serif;
+  font-size: 2rem;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+    0 0 20px rgba(255, 153, 0, 0.8), 0 0 30px rgba(255, 153, 0, 0.6),
+    0 0 40px rgba(255, 153, 0, 0.4), 0 0 50px rgba(255, 153, 0, 0.3);
+  background-color: #000;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
 @media (max-width: 1024px) {
   .productListMB {
     display: block;
