--- a/app/Component/InfoTechnicalComponent/InfoTechnicalComponent.module.css
+++ b/app/Component/InfoTechnicalComponent/InfoTechnicalComponent.module.css
@@ -77,6 +77,7 @@
   padding: 5px 8px;
   position: relative;
   vertical-align: middle;
+  transition: all 0.3s ease;
 }
 .listColorProduct {
   align-items: center;
@@ -103,6 +104,7 @@
   vertical-align: middle;
   width: 28px;
   position: relative;
+  transition: all 0.3s ease;
 }
 .groupButtonMobile {
   display: flex;
@@ -129,6 +131,14 @@
   background-color: rgb(250, 96, 96);
   cursor: pointer;
 }
+.listColorProduct div.selected {
+  border-width: 3px; /* Tăng độ dày của border khi được chọn */
+  transform: scale(1.1); /* Phóng to một chút để nổi bật hơn */
+}
+.listCapacity div.active {
+  background-color: #fff;
+  color: #000;
+}
 @media (max-width: 1024px) {
   .listColorProduct div {
     height: 15px;
@@ -145,7 +155,9 @@
   .productPrice span {
     font-size: 16px;
   }
-
+  .listColorProduct div.selected {
+    border-width: 2px;
+  }
   .productPrice {
     margin: 0 auto 10px;
   }
